--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "artesaos/seotools": "^1.3",
         "doctrine/dbal": "^3.9",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^3.11",
